--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t chronicideas/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true chronicideas/docker-react npm run test
+  - docker run chronicideas/docker-react npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
